Added coverage report production via:
gradle clean test coverage_report

Coverage report absolute path is shown upon completion.