@@ -19,6 +19,55 @@
 
 apply plugin: 'java'
 
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'org.apache.commons:commons-io:1.3.2'
+    }
+}
+
+configurations {
+    jacocoant
+    jacoco
+    antjunit
+}
+
+dependencies {
+    jacoco 'org.jacoco:org.jacoco.agent:0.6.2.201302030002'
+    jacocoant 'org.jacoco:org.jacoco.ant:0.6.2.201302030002'
+    antjunit 'org.apache.ant:ant-junit:1.8.4'
+}
+
+allprojects {
+    apply plugin: 'idea'
+    apply plugin: 'eclipse'
+    apply plugin: 'java'
+
+    configurations {
+        codeCoverage
+    }
+
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        compile fileTree(dir: new File(rootDir, 'libs'), include: '*.jar')
+        compile 'org.jacoco:org.jacoco.agent:0.6.2.201302030002'
+        codeCoverage group: 'org.jacoco', name: 'org.jacoco.agent', version: '0.6.2.201302030002', classifier: 'runtime'
+    }
+
+    test {
+        jvmArgs "-javaagent:${configurations.codeCoverage.singleFile}=destfile=${rootDir}/build/coverage/jacoco.exec,sessionid=HSServ,append=true",
+                '-Djacoco=true',
+                '-Xms128m',
+                '-Xmx512m',
+                '-XX:MaxPermSize=128m'
+    }
+}
+
 
 
 subprojects {
@@ -31,6 +80,8 @@ subprojects {
             url 'http://repository.jboss.org/nexus/content/groups/public'
         }
     }
+
+
 
     dependencies {
         testCompile 'junit:junit:4.10'
@@ -45,6 +96,7 @@ subprojects {
     jar {
         manifest.attributes provider: 'gradle'
     }
+
 }
 
 
@@ -69,5 +121,72 @@ project(':pool') {
 }
 
 
+
+
+
+task coverage_report(dependsOn: 'test') << {
+
+    //
+    // Get jacoco jar.
+    //
+    File jacocoJar = null;
+    project(':common').configurations.compile.each { file ->
+        if (file.name.indexOf('jacoco') > 0) {
+            jacocoJar = file;
+        }
+    }
+
+    File root = new File(projectDir, "build/coverage");
+
+    root.mkdirs();
+
+    File coverageReport = new File(root, "reports");
+
+    //
+    // Delete old reports.
+    //
+    if (coverageReport.exists()) {
+        org.apache.commons.io.FileUtils.deleteDirectory(coverageReport);
+    }
+
+    coverageReport.mkdirs();
+
+    ant.taskdef(name: "jacocoreport", classname: "org.jacoco.ant.ReportTask", classpath: configurations.jacocoant.asPath);
+
+    ant {
+        jacocoreport {
+            executiondata {
+                fileset(dir: "${rootDir}/build/coverage/") {
+                    file(file: 'jacoco.exec')
+                }
+            }
+
+            structure(name: rootProject.name) {
+
+                classfiles {
+                    fileset dir: "${rootDir}/common/build/classes/main"
+                    fileset dir: "${rootDir}/pool/build/classes/main"
+                }
+
+                // this is for Windows
+                sourcefiles(encoding: 'UTF8') {
+                    fileset dir: "${rootDir}/common/src/main/java"
+                    fileset dir: "${rootDir}/pool/src/main/java"
+                }
+            }
+
+            xml destfile: "${coverageReport}/poolnetty.xml"
+            html destdir: "${coverageReport}"
+        }
+    }
+
+    //
+    // Delete source file..
+    //
+    new File("{$rootDir}/build/coverage/jacoco.exe").delete();
+
+    println("\r\nCoverage Report can be found in: \r\n" + coverageReport);
+
+}
 
 
